Make IntelliJ happy with Maven style references between test projects
Signed-off-by: Andrii Kurdiumov <kant2002@gmail.com>