@@ -20,6 +20,7 @@
                     <configuration>
                         <compilerArgs>
                             <arg>--add-exports=java.desktop/sun.awt.image=ALL-UNNAMED</arg>
+                            <arg>--add-exports=java.desktop/sun.awt=ALL-UNNAMED</arg>
                         </compilerArgs>
                     </configuration>
                 </plugin>
@@ -37,6 +38,13 @@
             <groupId>ghidra</groupId>
             <artifactId>Generic</artifactId>
             <version>${project.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ghidra</groupId>
+            <artifactId>Generic</artifactId>
+            <version>${project.version}</version>
+            <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
